fixed alignment issues on event details.  taps in town title is no longer sticky for the time being. hompage still needs minor alignment adjustments. need to embed hop in background image to use as left blocking. need to include brewing process images on right as blocking.(will probably use wow.js

--- a/src/main/resources/static/navbar.css
+++ b/src/main/resources/static/navbar.css
@@ -582,9 +582,10 @@ Sliding Cards*/
 }
 
 .incrementIdBottom{
+    margin-top: 50px;
     max-height: 398px;
     padding:0px 0 0px 0;
-    background-color: aqua;
+    background-color: white;
     overflow: hidden
 }
 
@@ -597,4 +598,7 @@ Sliding Cards*/
     background-color: black;
 
 
+}
+.h4Hover :hover{
+    background-color: #ffc744;
 }
